Job image in Loki

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ networks:
 volumes:
   grafana_data:
   prometheus_data:
+  loki_data:
 
 services:
   grafana:
@@ -11,7 +12,7 @@ services:
     container_name: grafana
     restart: unless-stopped
     environment:
-      - GF_INSTALL_PLUGINS=grafana-xyzchart-panel, grafana-polystat-panel, yesoreyeram-infinity-datasource, volkovlabs-image-panel, betatech-qrcode-panel
+      - GF_INSTALL_PLUGINS=dalvany-image-panel, grafana-xyzchart-panel, grafana-polystat-panel, yesoreyeram-infinity-datasource, volkovlabs-image-panel, betatech-qrcode-panel
     depends_on:
       - prometheus
     ports:
@@ -41,6 +42,8 @@ services:
       - "--log.level=info"
       - "--prusalink.scrape-timeout=5"
       - "--udp.ip-override=${HOST_IP}"
+      - "--no-udp.gcode-enabled"
+      - "--loki.push-url=http://loki:3100/loki/api/v1/push"
     depends_on:
       - prometheus
     networks:
@@ -58,5 +61,18 @@ services:
       - prometheus_data:/prometheus
     ports:
       - "9090:9090"
+    networks:
+      - pubel
+
+  loki:
+    image: grafana/loki:3.5.5
+    container_name: loki
+    restart: unless-stopped
+    command: -config.file=/etc/loki/loki.yaml
+    ports:
+      - "3100:3100"
+    volumes:
+      - ./docs/config/loki.yaml:/etc/loki/loki.yaml
+      - loki_data:/loki
     networks:
       - pubel
